[project]
name = "devsecops-taxonomy-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adjusttext>=1.3.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.4",
]
